@@ -3,6 +3,7 @@
 - Updating test score now sets/unsets unit progress
 - Fixed LDAP registration ignoring "only LDAP" setting, introduced in build 9931
 - Added code for converting pdf units via view_file.php
+- Added autocomplete input fields to show categories in add lesson advanced settings
 
 === Version 3.6.8 build 9931 ===
 - Added chat module
